Update to JUnit 5 (#226)
Co-authored-by: Tom <Tom@DESKTOP-NUKKUHT.attlocal.net>