@@ -17,44 +17,39 @@
  */
 package pcgen.base.util;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
-import junit.framework.TestCase;
+import org.junit.jupiter.api.Test;
 
-import org.junit.Test;
+import pcgen.testsupport.TestSupport;
 
 /**
  * Shared Tests for testing classes that extend AbstractMapToList 
  */
-public abstract class AbstractMapToListTest extends TestCase
+public abstract class AbstractMapToListTest
 {
 
-	private static final Character CONST_E = 'E';
-
-	private static final Character CONST_C = 'C';
-
-	private static final Character CONST_F = 'F';
-
-	private static final Character CONST_D = 'D';
-
-	private static final Character CONST_B = 'B';
-
-	private static final Character CONST_A = 'A';
-
-	public static void populate(AbstractMapToList<Integer, Character> dkm)
+	public static void populate(AbstractMapToList<Integer, Character> mtl)
 	{
-		dkm.addToListFor(Integer.valueOf(1), CONST_A);
-		dkm.addToListFor(Integer.valueOf(1), CONST_B);
-		dkm.addToListFor(Integer.valueOf(1), CONST_C);
-		dkm.addToListFor(Integer.valueOf(2), CONST_D);
-		dkm.addToListFor(Integer.valueOf(2), CONST_E);
-		dkm.addToListFor(Integer.valueOf(2), null);
-		dkm.addToListFor(null, CONST_F);
-		dkm.addToListFor(Integer.valueOf(5), null);
+		mtl.addToListFor(TestSupport.I1, TestSupport.CONST_A);
+		mtl.addToListFor(TestSupport.I1, TestSupport.CONST_B);
+		mtl.addToListFor(TestSupport.I1, TestSupport.CONST_C);
+		mtl.addToListFor(TestSupport.I2, TestSupport.CONST_D);
+		mtl.addToListFor(TestSupport.I2, TestSupport.CONST_E);
+		mtl.addToListFor(TestSupport.I2, null);
+		mtl.addToListFor(null, TestSupport.CONST_F);
+		mtl.addToListFor(TestSupport.I5, null);
 	}
 
 	protected abstract AbstractMapToList<Integer, Character> getMapToList();
@@ -62,420 +57,393 @@ public abstract class AbstractMapToListTest extends TestCase
 	@Test
 	public void testInitializeListFor()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		assertNull(dkm.getListFor(Integer.valueOf(1)));
-		dkm.initializeListFor(Integer.valueOf(1));
-		List<Character> l = dkm.getListFor(Integer.valueOf(1));
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		assertNull(mtl.getListFor(TestSupport.I1));
+		mtl.initializeListFor(TestSupport.I1);
+		List<Character> l = mtl.getListFor(TestSupport.I1);
 		assertEquals(0, l.size());
-		try
-		{
-			dkm.initializeListFor(Integer.valueOf(1));
-			fail();
-		}
-		catch (IllegalArgumentException e)
-		{
-			//expected
-		}
+		assertThrows(IllegalArgumentException.class, () -> mtl.initializeListFor(TestSupport.I1));
 	}
 
 	@Test
 	public void testPutGet()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		assertNull(dkm.getListFor(null));
-		assertNull(dkm.getListFor(Integer.valueOf(1)));
-		populate(dkm);
-		List<Character> l = dkm.getListFor(Integer.valueOf(1));
-		assertEquals(3, dkm.sizeOfListFor(Integer.valueOf(1)));
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		assertNull(mtl.getListFor(null));
+		assertNull(mtl.getListFor(TestSupport.I1));
+		populate(mtl);
+		List<Character> l = mtl.getListFor(TestSupport.I1);
+		assertEquals(3, mtl.sizeOfListFor(TestSupport.I1));
 		assertEquals(3, l.size());
-		assertTrue(l.contains(CONST_A));
-		assertTrue(l.contains(CONST_B));
-		assertTrue(l.contains(CONST_C));
-		dkm.addToListFor(Integer.valueOf(1), CONST_C);
-		l = dkm.getListFor(Integer.valueOf(1));
-		assertEquals(4, dkm.sizeOfListFor(Integer.valueOf(1)));
+		assertTrue(l.contains(TestSupport.CONST_A));
+		assertTrue(l.contains(TestSupport.CONST_B));
+		assertTrue(l.contains(TestSupport.CONST_C));
+		mtl.addToListFor(TestSupport.I1, TestSupport.CONST_C);
+		l = mtl.getListFor(TestSupport.I1);
+		assertEquals(4, mtl.sizeOfListFor(TestSupport.I1));
 		assertEquals(4, l.size());
-		assertTrue(l.contains(CONST_A));
-		assertTrue(l.contains(CONST_B));
-		assertTrue(l.contains(CONST_C));
+		assertTrue(l.contains(TestSupport.CONST_A));
+		assertTrue(l.contains(TestSupport.CONST_B));
+		assertTrue(l.contains(TestSupport.CONST_C));
 		// two of them
-		l.remove(CONST_C);
-		assertTrue(l.contains(CONST_C));
-		l = dkm.getListFor(Integer.valueOf(2));
-		assertEquals(3, dkm.sizeOfListFor(Integer.valueOf(2)));
+		l.remove(TestSupport.CONST_C);
+		assertTrue(l.contains(TestSupport.CONST_C));
+		l = mtl.getListFor(TestSupport.I2);
+		assertEquals(3, mtl.sizeOfListFor(TestSupport.I2));
 		assertEquals(3, l.size());
-		assertTrue(l.contains(CONST_D));
-		assertTrue(l.contains(CONST_E));
+		assertTrue(l.contains(TestSupport.CONST_D));
+		assertTrue(l.contains(TestSupport.CONST_E));
 		assertTrue(l.contains(null));
-		dkm.addToListFor(Integer.valueOf(2), null);
-		l = dkm.getListFor(Integer.valueOf(2));
-		assertEquals(4, dkm.sizeOfListFor(Integer.valueOf(1)));
+		mtl.addToListFor(TestSupport.I2, null);
+		l = mtl.getListFor(TestSupport.I2);
+		assertEquals(4, mtl.sizeOfListFor(TestSupport.I1));
 		assertEquals(4, l.size());
-		assertTrue(l.contains(CONST_D));
-		assertTrue(l.contains(CONST_E));
+		assertTrue(l.contains(TestSupport.CONST_D));
+		assertTrue(l.contains(TestSupport.CONST_E));
 		assertTrue(l.contains(null));
 		// Two of them.
 		l.remove(null);
 		assertTrue(l.contains(null));
-		assertNull(dkm.getListFor(Integer.valueOf(4)));
-		l = dkm.getListFor(null);
-		assertEquals(1, dkm.sizeOfListFor(null));
+		assertNull(mtl.getListFor(TestSupport.I4));
+		l = mtl.getListFor(null);
+		assertEquals(1, mtl.sizeOfListFor(null));
 		assertEquals(1, l.size());
-		assertTrue(l.contains(CONST_F));
-		l.add(CONST_A);
-		List<Character> l2 = dkm.getListFor(null);
+		assertTrue(l.contains(TestSupport.CONST_F));
+		l.add(TestSupport.CONST_A);
+		List<Character> l2 = mtl.getListFor(null);
 		assertEquals(1, l2.size());
-		assertTrue(l2.contains(CONST_F));
+		assertTrue(l2.contains(TestSupport.CONST_F));
 		assertEquals(2, l.size());
-		assertTrue(l.contains(CONST_F));
-		assertTrue(l.contains(CONST_A));
-		dkm.clear();
+		assertTrue(l.contains(TestSupport.CONST_F));
+		assertTrue(l.contains(TestSupport.CONST_A));
+		mtl.clear();
 		assertEquals(1, l2.size());
-		assertTrue(l2.contains(CONST_F));
+		assertTrue(l2.contains(TestSupport.CONST_F));
 		assertEquals(2, l.size());
-		assertTrue(l.contains(CONST_F));
-		assertTrue(l.contains(CONST_A));
+		assertTrue(l.contains(TestSupport.CONST_F));
+		assertTrue(l.contains(TestSupport.CONST_A));
 		l2.clear();
 		assertEquals(0, l2.size());
 		assertEquals(2, l.size());
-		assertTrue(l.contains(CONST_F));
-		assertTrue(l.contains(CONST_A));
+		assertTrue(l.contains(TestSupport.CONST_F));
+		assertTrue(l.contains(TestSupport.CONST_A));
 	}
 
 	@Test
 	public void testContainsKey()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		assertFalse(dkm.containsListFor(Integer.valueOf(1)));
-		assertFalse(dkm.containsListFor(null));
-		populate(dkm);
-		assertTrue(dkm.containsListFor(Integer.valueOf(1)));
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		assertFalse(mtl.containsListFor(TestSupport.I1));
+		assertFalse(mtl.containsListFor(null));
+		populate(mtl);
+		assertTrue(mtl.containsListFor(TestSupport.I1));
 		// Keys are .equals items, not instance
-		assertTrue(dkm.containsListFor(new Integer(1)));
-		assertTrue(dkm.containsListFor(Integer.valueOf(2)));
-		assertTrue(dkm.containsListFor(Integer.valueOf(5)));
-		assertFalse(dkm.containsListFor(Integer.valueOf(-4)));
-		assertTrue(dkm.containsListFor(null));
+		assertTrue(mtl.containsListFor(new Integer(1)));
+		assertTrue(mtl.containsListFor(TestSupport.I2));
+		assertTrue(mtl.containsListFor(TestSupport.I5));
+		assertFalse(mtl.containsListFor(Integer.valueOf(-4)));
+		assertTrue(mtl.containsListFor(null));
 	}
 
 	@Test
 	public void testRemoveListFor()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		assertNull(dkm.removeListFor(Integer.valueOf(1)));
-		assertNull(dkm.removeListFor(null));
-		populate(dkm);
-		List<Character> l = dkm.removeListFor(Integer.valueOf(1));
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		assertNull(mtl.removeListFor(TestSupport.I1));
+		assertNull(mtl.removeListFor(null));
+		populate(mtl);
+		List<Character> l = mtl.removeListFor(TestSupport.I1);
 		assertEquals(3, l.size());
-		assertTrue(l.contains(CONST_A));
-		assertTrue(l.contains(CONST_B));
-		assertTrue(l.contains(CONST_C));
-		assertFalse(dkm.containsListFor(Integer.valueOf(1)));
-		assertNull(dkm.getListFor(Integer.valueOf(1)));
-		l = dkm.removeListFor(Integer.valueOf(2));
+		assertTrue(l.contains(TestSupport.CONST_A));
+		assertTrue(l.contains(TestSupport.CONST_B));
+		assertTrue(l.contains(TestSupport.CONST_C));
+		assertFalse(mtl.containsListFor(TestSupport.I1));
+		assertNull(mtl.getListFor(TestSupport.I1));
+		l = mtl.removeListFor(TestSupport.I2);
 		assertEquals(3, l.size());
-		assertTrue(l.contains(CONST_D));
-		assertTrue(l.contains(CONST_E));
+		assertTrue(l.contains(TestSupport.CONST_D));
+		assertTrue(l.contains(TestSupport.CONST_E));
 		assertTrue(l.contains(null));
-		l = dkm.removeListFor(null);
+		l = mtl.removeListFor(null);
 		assertEquals(1, l.size());
-		assertTrue(l.contains(CONST_F));
+		assertTrue(l.contains(TestSupport.CONST_F));
 	}
 
 	@Test
 	public void testRemoveFromListFor()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		assertFalse(dkm.removeFromListFor(Integer.valueOf(1), CONST_D));
-		populate(dkm);
-		assertTrue(dkm.removeFromListFor(Integer.valueOf(1), CONST_A));
-		assertTrue(dkm.containsListFor(Integer.valueOf(1)));
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		assertFalse(mtl.removeFromListFor(TestSupport.I1, TestSupport.CONST_D));
+		populate(mtl);
+		assertTrue(mtl.removeFromListFor(TestSupport.I1, TestSupport.CONST_A));
+		assertTrue(mtl.containsListFor(TestSupport.I1));
 		// Keys are .equals items, not instance
-		assertTrue(dkm.containsListFor(new Integer(1)));
-		assertEquals(2, dkm.sizeOfListFor(Integer.valueOf(1)));
-		assertFalse(dkm.removeFromListFor(Integer.valueOf(1), CONST_A));
-		assertTrue(dkm.removeFromListFor(Integer.valueOf(1), CONST_B));
-		assertEquals(1, dkm.sizeOfListFor(Integer.valueOf(1)));
-		assertTrue(dkm.containsListFor(Integer.valueOf(1)));
-		assertFalse(dkm.removeFromListFor(Integer.valueOf(1), CONST_A));
-		assertTrue(dkm.removeFromListFor(Integer.valueOf(1), CONST_C));
-		assertEquals(0, dkm.sizeOfListFor(Integer.valueOf(1)));
-		assertFalse(dkm.containsListFor(Integer.valueOf(1)));
+		assertTrue(mtl.containsListFor(new Integer(1)));
+		assertEquals(2, mtl.sizeOfListFor(TestSupport.I1));
+		assertFalse(mtl.removeFromListFor(TestSupport.I1, TestSupport.CONST_A));
+		assertTrue(mtl.removeFromListFor(TestSupport.I1, TestSupport.CONST_B));
+		assertEquals(1, mtl.sizeOfListFor(TestSupport.I1));
+		assertTrue(mtl.containsListFor(TestSupport.I1));
+		assertFalse(mtl.removeFromListFor(TestSupport.I1, TestSupport.CONST_A));
+		assertTrue(mtl.removeFromListFor(TestSupport.I1, TestSupport.CONST_C));
+		assertEquals(0, mtl.sizeOfListFor(TestSupport.I1));
+		assertFalse(mtl.containsListFor(TestSupport.I1));
 
 		// add a second :)
-		dkm.addToListFor(Integer.valueOf(2), CONST_D);
-		assertFalse(dkm.removeFromListFor(Integer.valueOf(2), CONST_A));
-		assertTrue(dkm.containsListFor(Integer.valueOf(2)));
-		assertEquals(4, dkm.sizeOfListFor(Integer.valueOf(2)));
-		assertFalse(dkm.removeFromListFor(Integer.valueOf(2), CONST_A));
-		assertTrue(dkm.removeFromListFor(Integer.valueOf(2), CONST_D));
-		assertEquals(3, dkm.sizeOfListFor(Integer.valueOf(2)));
-		assertTrue(dkm.containsListFor(Integer.valueOf(2)));
-		assertTrue(dkm.removeFromListFor(Integer.valueOf(2), CONST_E));
-		assertEquals(2, dkm.sizeOfListFor(Integer.valueOf(2)));
-		assertTrue(dkm.containsListFor(Integer.valueOf(2)));
-		assertTrue(dkm.removeFromListFor(Integer.valueOf(2), null));
-		assertEquals(1, dkm.sizeOfListFor(Integer.valueOf(2)));
-		assertTrue(dkm.containsListFor(Integer.valueOf(2)));
-		assertTrue(dkm.removeFromListFor(Integer.valueOf(2), CONST_D));
-		assertEquals(0, dkm.sizeOfListFor(Integer.valueOf(2)));
-		assertFalse(dkm.containsListFor(Integer.valueOf(2)));
+		mtl.addToListFor(TestSupport.I2, TestSupport.CONST_D);
+		assertFalse(mtl.removeFromListFor(TestSupport.I2, TestSupport.CONST_A));
+		assertTrue(mtl.containsListFor(TestSupport.I2));
+		assertEquals(4, mtl.sizeOfListFor(TestSupport.I2));
+		assertFalse(mtl.removeFromListFor(TestSupport.I2, TestSupport.CONST_A));
+		assertTrue(mtl.removeFromListFor(TestSupport.I2, TestSupport.CONST_D));
+		assertEquals(3, mtl.sizeOfListFor(TestSupport.I2));
+		assertTrue(mtl.containsListFor(TestSupport.I2));
+		assertTrue(mtl.removeFromListFor(TestSupport.I2, TestSupport.CONST_E));
+		assertEquals(2, mtl.sizeOfListFor(TestSupport.I2));
+		assertTrue(mtl.containsListFor(TestSupport.I2));
+		assertTrue(mtl.removeFromListFor(TestSupport.I2, null));
+		assertEquals(1, mtl.sizeOfListFor(TestSupport.I2));
+		assertTrue(mtl.containsListFor(TestSupport.I2));
+		assertTrue(mtl.removeFromListFor(TestSupport.I2, TestSupport.CONST_D));
+		assertEquals(0, mtl.sizeOfListFor(TestSupport.I2));
+		assertFalse(mtl.containsListFor(TestSupport.I2));
 
 		// Test null stuff :)
-		assertFalse(dkm.removeFromListFor(null, CONST_A));
-		assertTrue(dkm.containsListFor(null));
-		assertEquals(1, dkm.sizeOfListFor(null));
-		assertFalse(dkm.removeFromListFor(null, CONST_A));
-		assertTrue(dkm.removeFromListFor(null, CONST_F));
-		assertEquals(0, dkm.sizeOfListFor(null));
-		assertFalse(dkm.containsListFor(null));
+		assertFalse(mtl.removeFromListFor(null, TestSupport.CONST_A));
+		assertTrue(mtl.containsListFor(null));
+		assertEquals(1, mtl.sizeOfListFor(null));
+		assertFalse(mtl.removeFromListFor(null, TestSupport.CONST_A));
+		assertTrue(mtl.removeFromListFor(null, TestSupport.CONST_F));
+		assertEquals(0, mtl.sizeOfListFor(null));
+		assertFalse(mtl.containsListFor(null));
 	}
 
 	@Test
 	public void testContainsInList()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		assertFalse(dkm.containsInList(Integer.valueOf(1), CONST_D));
-		populate(dkm);
-		assertTrue(dkm.containsInList(Integer.valueOf(1), CONST_A));
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		assertFalse(mtl.containsInList(TestSupport.I1, TestSupport.CONST_D));
+		populate(mtl);
+		assertTrue(mtl.containsInList(TestSupport.I1, TestSupport.CONST_A));
 		// Keys are .equals items, not instance
-		assertTrue(dkm.containsInList(new Integer(1), CONST_A));
-		assertTrue(dkm.containsInList(Integer.valueOf(1), CONST_B));
-		assertTrue(dkm.containsInList(Integer.valueOf(1), CONST_C));
-		assertFalse(dkm.containsInList(Integer.valueOf(1), CONST_D));
+		assertTrue(mtl.containsInList(new Integer(1), TestSupport.CONST_A));
+		assertTrue(mtl.containsInList(TestSupport.I1, TestSupport.CONST_B));
+		assertTrue(mtl.containsInList(TestSupport.I1, TestSupport.CONST_C));
+		assertFalse(mtl.containsInList(TestSupport.I1, TestSupport.CONST_D));
 
 		// add a second :)
-		dkm.addToListFor(Integer.valueOf(1), CONST_C);
-		assertTrue(dkm.containsInList(Integer.valueOf(1), CONST_C));
+		mtl.addToListFor(TestSupport.I1, TestSupport.CONST_C);
+		assertTrue(mtl.containsInList(TestSupport.I1, TestSupport.CONST_C));
 
 		// Test null stuff :)
-		assertTrue(dkm.containsInList(Integer.valueOf(2), null));
+		assertTrue(mtl.containsInList(TestSupport.I2, null));
 
-		assertFalse(dkm.containsInList(null, CONST_A));
-		assertTrue(dkm.containsInList(null, CONST_F));
+		assertFalse(mtl.containsInList(null, TestSupport.CONST_A));
+		assertTrue(mtl.containsInList(null, TestSupport.CONST_F));
 	}
 
 	@Test
 	public void testContainsAnyInList()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		assertFalse(dkm.containsAnyInList(Integer.valueOf(1),
-			Collections.singletonList(CONST_D)));
-		populate(dkm);
-		assertTrue(dkm.containsAnyInList(Integer.valueOf(1),
-			Collections.singletonList(CONST_A)));
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		assertFalse(mtl.containsAnyInList(TestSupport.I1,
+			Collections.singletonList(TestSupport.CONST_D)));
+		populate(mtl);
+		assertTrue(mtl.containsAnyInList(TestSupport.I1,
+			Collections.singletonList(TestSupport.CONST_A)));
 		// Keys are .equals items, not instance
-		assertTrue(dkm.containsAnyInList(new Integer(1),
-			Arrays.asList(new Character[]{CONST_A, CONST_D})));
-		assertTrue(dkm.containsAnyInList(Integer.valueOf(1),
-			Arrays.asList(new Character[]{CONST_D, CONST_B})));
-		assertTrue(dkm.containsAnyInList(Integer.valueOf(1),
-			Arrays.asList(new Character[]{CONST_C, CONST_B})));
-		assertFalse(dkm.containsAnyInList(Integer.valueOf(1),
-			Arrays.asList(new Character[]{CONST_D, CONST_E, CONST_F})));
+		assertTrue(mtl.containsAnyInList(new Integer(1),
+			Arrays.asList(new Character[]{TestSupport.CONST_A, TestSupport.CONST_D})));
+		assertTrue(mtl.containsAnyInList(TestSupport.I1,
+			Arrays.asList(new Character[]{TestSupport.CONST_D, TestSupport.CONST_B})));
+		assertTrue(mtl.containsAnyInList(TestSupport.I1,
+			Arrays.asList(new Character[]{TestSupport.CONST_C, TestSupport.CONST_B})));
+		assertFalse(mtl.containsAnyInList(TestSupport.I1,
+			Arrays.asList(new Character[]{TestSupport.CONST_D, TestSupport.CONST_E, TestSupport.CONST_F})));
 
 		// add a second :)
-		dkm.addToListFor(Integer.valueOf(1), CONST_C);
-		assertTrue(dkm.containsAnyInList(Integer.valueOf(1),
-			Arrays.asList(new Character[]{CONST_C, CONST_F})));
+		mtl.addToListFor(TestSupport.I1, TestSupport.CONST_C);
+		assertTrue(mtl.containsAnyInList(TestSupport.I1,
+			Arrays.asList(new Character[]{TestSupport.CONST_C, TestSupport.CONST_F})));
 
 		// Test null stuff :)
-		assertTrue(dkm.containsAnyInList(Integer.valueOf(2),
-			Arrays.asList(new Character[]{CONST_F, null})));
-		try
-		{
-			assertFalse(dkm.containsAnyInList(Integer.valueOf(2), null));
-			fail();
-		}
-		catch (NullPointerException e)
-		{
-			//Yep!
-		}
-		assertFalse(dkm.containsAnyInList(Integer.valueOf(2), Collections.<Character>emptyList()));
+		assertTrue(mtl.containsAnyInList(TestSupport.I2,
+			Arrays.asList(new Character[]{TestSupport.CONST_F, null})));
+		assertThrows(NullPointerException.class, () -> mtl.containsAnyInList(TestSupport.I2, null));
+		assertFalse(mtl.containsAnyInList(TestSupport.I2, Collections.<Character>emptyList()));
 
-		assertTrue(dkm.containsAnyInList(null,
-			Arrays.asList(new Character[]{CONST_A, CONST_F})));
-		assertFalse(dkm.containsAnyInList(null,
-			Arrays.asList(new Character[]{CONST_A, CONST_D})));
+		assertTrue(mtl.containsAnyInList(null,
+			Arrays.asList(new Character[]{TestSupport.CONST_A, TestSupport.CONST_F})));
+		assertFalse(mtl.containsAnyInList(null,
+			Arrays.asList(new Character[]{TestSupport.CONST_A, TestSupport.CONST_D})));
 	}
 
 	@Test
 	public void testGetKeySet()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		Set<Integer> s = dkm.getKeySet();
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		Set<Integer> s = mtl.getKeySet();
 		assertEquals(0, s.size());
 		s.add(Integer.valueOf(-5));
 		// Ensure not saved in DoubleKeyMap
-		Set<Integer> s2 = dkm.getKeySet();
+		Set<Integer> s2 = mtl.getKeySet();
 		assertEquals(0, s2.size());
 		assertEquals(1, s.size());
 		// And ensure references are not kept the other direction to be altered
 		// by changes in the underlying DoubleKeyMap
-		populate(dkm);
+		populate(mtl);
 		assertEquals(1, s.size());
 		assertEquals(0, s2.size());
-		Set<Integer> s3 = dkm.getKeySet();
+		Set<Integer> s3 = mtl.getKeySet();
 		assertEquals(4, s3.size());
-		assertTrue(s3.contains(Integer.valueOf(1)));
-		assertTrue(s3.contains(Integer.valueOf(2)));
-		assertTrue(s3.contains(Integer.valueOf(5)));
+		assertTrue(s3.contains(TestSupport.I1));
+		assertTrue(s3.contains(TestSupport.I2));
+		assertTrue(s3.contains(TestSupport.I5));
 		assertTrue(s3.contains(null));
 	}
 
 	@Test
 	public void testClearIsEmpty()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		assertTrue(dkm.isEmpty());
-		assertEquals(0, dkm.size());
-		populate(dkm);
-		assertFalse(dkm.isEmpty());
-		assertEquals(4, dkm.size());
-		dkm.clear();
-		assertTrue(dkm.isEmpty());
-		assertEquals(0, dkm.size());
-		dkm.addToListFor(null, 'F');
-		assertFalse(dkm.isEmpty());
-		assertEquals(1, dkm.size());
-		dkm.clear();
-		assertTrue(dkm.isEmpty());
-		assertEquals(0, dkm.size());
-		dkm.addToListFor(Integer.valueOf(3), 'G');
-		assertFalse(dkm.isEmpty());
-		assertEquals(1, dkm.size());
-		dkm.clear();
-		assertTrue(dkm.isEmpty());
-		assertEquals(0, dkm.size());
-		dkm.addToListFor(Integer.valueOf(5), null);
-		assertFalse(dkm.isEmpty());
-		assertEquals(1, dkm.size());
-		dkm.clear();
-		assertTrue(dkm.isEmpty());
-		assertEquals(0, dkm.size());
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		assertTrue(mtl.isEmpty());
+		assertEquals(0, mtl.size());
+		populate(mtl);
+		assertFalse(mtl.isEmpty());
+		assertEquals(4, mtl.size());
+		mtl.clear();
+		assertTrue(mtl.isEmpty());
+		assertEquals(0, mtl.size());
+		mtl.addToListFor(null, 'F');
+		assertFalse(mtl.isEmpty());
+		assertEquals(1, mtl.size());
+		mtl.clear();
+		assertTrue(mtl.isEmpty());
+		assertEquals(0, mtl.size());
+		mtl.addToListFor(TestSupport.I3, 'G');
+		assertFalse(mtl.isEmpty());
+		assertEquals(1, mtl.size());
+		mtl.clear();
+		assertTrue(mtl.isEmpty());
+		assertEquals(0, mtl.size());
+		mtl.addToListFor(TestSupport.I5, null);
+		assertFalse(mtl.isEmpty());
+		assertEquals(1, mtl.size());
+		mtl.clear();
+		assertTrue(mtl.isEmpty());
+		assertEquals(0, mtl.size());
 	}
 
 	@Test
 	public void testEmptyAddAll()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		dkm.addAllToListFor(Integer.valueOf(1), null);
-		assertFalse(dkm.containsListFor(Integer.valueOf(1)));
-		dkm.addAllToListFor(Integer.valueOf(1), new ArrayList<>());
-		assertFalse(dkm.containsListFor(Integer.valueOf(1)));
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		mtl.addAllToListFor(TestSupport.I1, null);
+		assertFalse(mtl.containsListFor(TestSupport.I1));
+		mtl.addAllToListFor(TestSupport.I1, new ArrayList<>());
+		assertFalse(mtl.containsListFor(TestSupport.I1));
 	}
 
 	@Test
 	public void testAddAll()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
 		List<Character> l = new ArrayList<>();
-		l.add(CONST_A);
+		l.add(TestSupport.CONST_A);
 		l.add(null);
-		l.add(CONST_A);
-		l.add(CONST_B);
-		dkm.addAllToListFor(Integer.valueOf(1), l);
-		assertTrue(dkm.containsListFor(Integer.valueOf(1)));
-		assertEquals(4, dkm.sizeOfListFor(Integer.valueOf(1)));
-		dkm.addToListFor(Integer.valueOf(1), CONST_D);
+		l.add(TestSupport.CONST_A);
+		l.add(TestSupport.CONST_B);
+		mtl.addAllToListFor(TestSupport.I1, l);
+		assertTrue(mtl.containsListFor(TestSupport.I1));
+		assertEquals(4, mtl.sizeOfListFor(TestSupport.I1));
+		mtl.addToListFor(TestSupport.I1, TestSupport.CONST_D);
 		assertEquals(4, l.size());
 		// Check reference semantics!
-		l.add(CONST_C);
-		l.add(CONST_E);
-		assertTrue(dkm.containsListFor(Integer.valueOf(1)));
-		assertEquals(5, dkm.sizeOfListFor(Integer.valueOf(1)));
+		l.add(TestSupport.CONST_C);
+		l.add(TestSupport.CONST_E);
+		assertTrue(mtl.containsListFor(TestSupport.I1));
+		assertEquals(5, mtl.sizeOfListFor(TestSupport.I1));
 		l.clear();
-		assertTrue(dkm.containsListFor(Integer.valueOf(1)));
-		assertEquals(5, dkm.sizeOfListFor(Integer.valueOf(1)));
+		assertTrue(mtl.containsListFor(TestSupport.I1));
+		assertEquals(5, mtl.sizeOfListFor(TestSupport.I1));
 	}
 
 	@Test
 	public void testInstanceBehavior()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		Character ca = Character.valueOf('a');
-		Character cb = Character.valueOf('b');
-		Character cc = Character.valueOf('c');
-		Character ca1 = new Character('a');
-		Integer i1 = Integer.valueOf(1);
-		dkm.addToListFor(i1, ca);
-		dkm.addToListFor(i1, cb);
-		dkm.addToListFor(i1, cc);
-		Integer i2 = Integer.valueOf(2);
-		dkm.addToListFor(i2, ca);
-		dkm.addToListFor(i2, ca);
-		Integer i3 = Integer.valueOf(3);
-		dkm.addToListFor(i3, cb);
-		dkm.addToListFor(i3, cc);
-		assertTrue(dkm.containsInList(i1, ca));
-		assertTrue(dkm.containsInList(i1, ca1));
-		assertTrue(dkm.removeFromListFor(i1, ca1));
-		assertFalse(dkm.containsInList(i1, ca));
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		Character ca = TestSupport.CONST_A;
+		Character cb = TestSupport.CONST_B;
+		Character cc = TestSupport.CONST_C;
+		Character ca1 = new Character(TestSupport.CONST_A.charValue());
+		mtl.addToListFor(TestSupport.I1, ca);
+		mtl.addToListFor(TestSupport.I1, cb);
+		mtl.addToListFor(TestSupport.I1, cc);
+		mtl.addToListFor(TestSupport.I2, ca);
+		mtl.addToListFor(TestSupport.I2, ca);
+		mtl.addToListFor(TestSupport.I3, cb);
+		mtl.addToListFor(TestSupport.I3, cc);
+		assertTrue(mtl.containsInList(TestSupport.I1, ca));
+		assertTrue(mtl.containsInList(TestSupport.I1, ca1));
+		assertTrue(mtl.removeFromListFor(TestSupport.I1, ca1));
+		assertFalse(mtl.containsInList(TestSupport.I1, ca));
 
-		assertTrue(dkm.containsInList(i2, ca));
-		assertTrue(dkm.containsInList(i2, ca1));
-		assertTrue(dkm.removeFromListFor(i2, ca1));
+		assertTrue(mtl.containsInList(TestSupport.I2, ca));
+		assertTrue(mtl.containsInList(TestSupport.I2, ca1));
+		assertTrue(mtl.removeFromListFor(TestSupport.I2, ca1));
 		// There were two
-		assertTrue(dkm.containsInList(i2, ca));
-		assertTrue(dkm.removeFromListFor(i2, ca));
+		assertTrue(mtl.containsInList(TestSupport.I2, ca));
+		assertTrue(mtl.removeFromListFor(TestSupport.I2, ca));
 		// There were two
-		assertFalse(dkm.containsInList(i2, ca));
+		assertFalse(mtl.containsInList(TestSupport.I2, ca));
 	}
 
 	@Test
 	public void testAddAllLists()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		AbstractMapToList<Integer, Character> dkm2 = getMapToList();
-		populate(dkm);
-		dkm2.addAllLists(dkm);
-		assertTrue(dkm.removeFromListFor(Integer.valueOf(1), CONST_A));
-		assertTrue(dkm2.containsInList(Integer.valueOf(1), CONST_A));
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		AbstractMapToList<Integer, Character> mtl2 = getMapToList();
+		populate(mtl);
+		mtl2.addAllLists(mtl);
+		assertTrue(mtl.removeFromListFor(TestSupport.I1, TestSupport.CONST_A));
+		assertTrue(mtl2.containsInList(TestSupport.I1, TestSupport.CONST_A));
 
-		assertTrue(dkm2.removeFromListFor(Integer.valueOf(1), CONST_B));
-		assertTrue(dkm.containsInList(Integer.valueOf(1), CONST_B));
+		assertTrue(mtl2.removeFromListFor(TestSupport.I1, TestSupport.CONST_B));
+		assertTrue(mtl.containsInList(TestSupport.I1, TestSupport.CONST_B));
 
-		dkm.removeListFor(Integer.valueOf(1));
-		assertFalse(dkm.containsListFor(Integer.valueOf(1)));
-		assertTrue(dkm2.containsListFor(Integer.valueOf(1)));
+		mtl.removeListFor(TestSupport.I1);
+		assertFalse(mtl.containsListFor(TestSupport.I1));
+		assertTrue(mtl2.containsListFor(TestSupport.I1));
 	}
 
 	@Test
 	public void testGetElementInList()
 	{
-		AbstractMapToList<Integer, Character> dkm = getMapToList();
+		AbstractMapToList<Integer, Character> mtl = getMapToList();
+		assertThrows(NullPointerException.class, () -> mtl.getElementInList(TestSupport.I1, 0));
+		populate(mtl);
 		try
 		{
-			dkm.getElementInList(Integer.valueOf(1), 0);
-			fail("Expected IllegalArgumentException");
-		}
-		catch (NullPointerException | IllegalArgumentException e)
-		{
-			//expected
-		}
-		populate(dkm);
-		try
-		{
-			dkm.getElementInList(Integer.valueOf(1), 3);
+			mtl.getElementInList(TestSupport.I1, 3);
 			fail("Expected IndexOutOfBoundsException");
 		}
 		catch (IndexOutOfBoundsException e)
 		{
 			//expected
 		}
-		assertEquals(CONST_A, dkm.getElementInList(Integer.valueOf(1), 0));
-		assertEquals(CONST_B, dkm.getElementInList(Integer.valueOf(1), 1));
-		assertEquals(CONST_C, dkm.getElementInList(Integer.valueOf(1), 2));
-		dkm.addToListFor(Integer.valueOf(1), CONST_C);
-		assertEquals(CONST_A, dkm.getElementInList(Integer.valueOf(1), 0));
-		assertEquals(CONST_B, dkm.getElementInList(Integer.valueOf(1), 1));
-		assertEquals(CONST_C, dkm.getElementInList(Integer.valueOf(1), 2));
-		assertEquals(CONST_C, dkm.getElementInList(Integer.valueOf(1), 3));
+		assertEquals(TestSupport.CONST_A, mtl.getElementInList(TestSupport.I1, 0));
+		assertEquals(TestSupport.CONST_B, mtl.getElementInList(TestSupport.I1, 1));
+		assertEquals(TestSupport.CONST_C, mtl.getElementInList(TestSupport.I1, 2));
+		mtl.addToListFor(TestSupport.I1, TestSupport.CONST_C);
+		assertEquals(TestSupport.CONST_A, mtl.getElementInList(TestSupport.I1, 0));
+		assertEquals(TestSupport.CONST_B, mtl.getElementInList(TestSupport.I1, 1));
+		assertEquals(TestSupport.CONST_C, mtl.getElementInList(TestSupport.I1, 2));
+		assertEquals(TestSupport.CONST_C, mtl.getElementInList(TestSupport.I1, 3));
 
-		assertEquals(CONST_D, dkm.getElementInList(Integer.valueOf(2), 0));
-		assertEquals(CONST_E, dkm.getElementInList(Integer.valueOf(2), 1));
-		assertNull(dkm.getElementInList(Integer.valueOf(2), 2));
+		assertEquals(TestSupport.CONST_D, mtl.getElementInList(TestSupport.I2, 0));
+		assertEquals(TestSupport.CONST_E, mtl.getElementInList(TestSupport.I2, 1));
+		assertNull(mtl.getElementInList(TestSupport.I2, 2));
 
-		assertEquals(CONST_F, dkm.getElementInList(null, 0));
+		assertEquals(TestSupport.CONST_F, mtl.getElementInList(null, 0));
 	}
 }
