@@ -17,66 +17,47 @@
  */
 package pcgen.base.util;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
 import java.util.ArrayList;
 import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Set;
 
-import junit.framework.TestCase;
+import org.junit.jupiter.api.Test;
 
-import org.junit.Before;
-import org.junit.Test;
+import pcgen.testsupport.TestSupport;
 
 /**
  * Test GenericMapToList using an IdentityHashMap as the underlying Map
  */
-public class GenericMapToListIdentityHashTest extends TestCase
+public class GenericMapToListIdentityHashTest
 {
 
-	private static final Integer CONST_5 = Integer.valueOf(5);
-
-	private static final Integer CONST_2 = Integer.valueOf(2);
-
 	private static final Integer CONST_1A = new Integer(1);
-
 	private static final Integer CONST_1B = new Integer(1);
 
-	private static final Character CONST_E = 'E';
-
-	private static final Character CONST_C = 'C';
-
-	private static final Character CONST_F = 'F';
-
-	private static final Character CONST_D = 'D';
-
-	private static final Character CONST_B = 'B';
-
-	private static final Character CONST_A = 'A';
-
-	private GenericMapToList<Integer, Character> dkm;
-
-	@Override
-	@Before
-	public void setUp()
+	public void populate(GenericMapToList<Integer, Character> dkm)
 	{
-		dkm = GenericMapToList.getMapToList(IdentityHashMap.class);
-	}
-
-	public void populate()
-	{
-		dkm.addToListFor(CONST_1A, CONST_A);
-		dkm.addToListFor(CONST_1B, CONST_B);
-		dkm.addToListFor(CONST_1B, CONST_C);
-		dkm.addToListFor(CONST_2, CONST_D);
-		dkm.addToListFor(CONST_2, CONST_E);
-		dkm.addToListFor(CONST_2, null);
-		dkm.addToListFor(null, CONST_F);
-		dkm.addToListFor(CONST_5, null);
+		dkm.addToListFor(CONST_1A, TestSupport.CONST_A);
+		dkm.addToListFor(CONST_1B, TestSupport.CONST_B);
+		dkm.addToListFor(CONST_1B, TestSupport.CONST_C);
+		dkm.addToListFor(TestSupport.I2, TestSupport.CONST_D);
+		dkm.addToListFor(TestSupport.I2, TestSupport.CONST_E);
+		dkm.addToListFor(TestSupport.I2, null);
+		dkm.addToListFor(null, TestSupport.CONST_F);
+		dkm.addToListFor(TestSupport.I5, null);
 	}
 
 	@Test
 	public void testInitializeListFor()
 	{
+		GenericMapToList<Integer, Character> dkm =
+				GenericMapToList.getMapToList(IdentityHashMap.class);
 		assertNull(dkm.getListFor(CONST_1A));
 		assertNull(dkm.getListFor(CONST_1B));
 		dkm.initializeListFor(CONST_1A);
@@ -86,44 +67,38 @@ public class GenericMapToListIdentityHashTest extends TestCase
 		dkm.initializeListFor(CONST_1B);
 		l = dkm.getListFor(CONST_1B);
 		assertEquals(0, l.size());
-		try
-		{
-			dkm.initializeListFor(CONST_1A);
-			fail();
-		}
-		catch (IllegalArgumentException e)
-		{
-			//expected
-		}
+		assertThrows(IllegalArgumentException.class, () -> dkm.initializeListFor(CONST_1A));
 	}
 
 	@Test
 	public void testPutGet()
 	{
+		GenericMapToList<Integer, Character> dkm =
+				GenericMapToList.getMapToList(IdentityHashMap.class);
 		assertNull(dkm.getListFor(null));
 		assertNull(dkm.getListFor(CONST_1A));
-		populate();
+		populate(dkm);
 		List<Character> l = dkm.getListFor(CONST_1A);
 		assertEquals(1, l.size());
-		assertTrue(l.contains(CONST_A));
-		dkm.addToListFor(CONST_1B, CONST_C);
+		assertTrue(l.contains(TestSupport.CONST_A));
+		dkm.addToListFor(CONST_1B, TestSupport.CONST_C);
 		l = dkm.getListFor(CONST_1B);
 		assertEquals(3, l.size());
-		assertTrue(l.contains(CONST_B));
-		assertTrue(l.contains(CONST_C));
+		assertTrue(l.contains(TestSupport.CONST_B));
+		assertTrue(l.contains(TestSupport.CONST_C));
 		// two of them
-		l.remove(CONST_C);
-		assertTrue(l.contains(CONST_C));
-		l = dkm.getListFor(CONST_2);
+		l.remove(TestSupport.CONST_C);
+		assertTrue(l.contains(TestSupport.CONST_C));
+		l = dkm.getListFor(TestSupport.I2);
 		assertEquals(3, l.size());
-		assertTrue(l.contains(CONST_D));
-		assertTrue(l.contains(CONST_E));
+		assertTrue(l.contains(TestSupport.CONST_D));
+		assertTrue(l.contains(TestSupport.CONST_E));
 		assertTrue(l.contains(null));
-		dkm.addToListFor(CONST_2, null);
-		l = dkm.getListFor(CONST_2);
+		dkm.addToListFor(TestSupport.I2, null);
+		l = dkm.getListFor(TestSupport.I2);
 		assertEquals(4, l.size());
-		assertTrue(l.contains(CONST_D));
-		assertTrue(l.contains(CONST_E));
+		assertTrue(l.contains(TestSupport.CONST_D));
+		assertTrue(l.contains(TestSupport.CONST_E));
 		assertTrue(l.contains(null));
 		// Two of them.
 		l.remove(null);
@@ -131,38 +106,40 @@ public class GenericMapToListIdentityHashTest extends TestCase
 		assertNull(dkm.getListFor(Integer.valueOf(4)));
 		l = dkm.getListFor(null);
 		assertEquals(1, l.size());
-		assertTrue(l.contains(CONST_F));
-		l.add(CONST_A);
+		assertTrue(l.contains(TestSupport.CONST_F));
+		l.add(TestSupport.CONST_A);
 		List<Character> l2 = dkm.getListFor(null);
 		assertEquals(1, l2.size());
-		assertTrue(l2.contains(CONST_F));
+		assertTrue(l2.contains(TestSupport.CONST_F));
 		assertEquals(2, l.size());
-		assertTrue(l.contains(CONST_F));
-		assertTrue(l.contains(CONST_A));
+		assertTrue(l.contains(TestSupport.CONST_F));
+		assertTrue(l.contains(TestSupport.CONST_A));
 		dkm.clear();
 		assertEquals(1, l2.size());
-		assertTrue(l2.contains(CONST_F));
+		assertTrue(l2.contains(TestSupport.CONST_F));
 		assertEquals(2, l.size());
-		assertTrue(l.contains(CONST_F));
-		assertTrue(l.contains(CONST_A));
+		assertTrue(l.contains(TestSupport.CONST_F));
+		assertTrue(l.contains(TestSupport.CONST_A));
 		l2.clear();
 		assertEquals(0, l2.size());
 		assertEquals(2, l.size());
-		assertTrue(l.contains(CONST_F));
-		assertTrue(l.contains(CONST_A));
+		assertTrue(l.contains(TestSupport.CONST_F));
+		assertTrue(l.contains(TestSupport.CONST_A));
 	}
 
 	@Test
 	public void testContainsKey()
 	{
+		GenericMapToList<Integer, Character> dkm =
+				GenericMapToList.getMapToList(IdentityHashMap.class);
 		assertFalse(dkm.containsListFor(CONST_1A));
 		assertFalse(dkm.containsListFor(null));
-		populate();
+		populate(dkm);
 		assertTrue(dkm.containsListFor(CONST_1A));
 		// Keys are .equals items, not instance
 		assertFalse(dkm.containsListFor(new Integer(1)));
-		assertTrue(dkm.containsListFor(CONST_2));
-		assertTrue(dkm.containsListFor(CONST_5));
+		assertTrue(dkm.containsListFor(TestSupport.I2));
+		assertTrue(dkm.containsListFor(TestSupport.I5));
 		assertFalse(dkm.containsListFor(Integer.valueOf(-4)));
 		assertTrue(dkm.containsListFor(null));
 	}
@@ -170,66 +147,70 @@ public class GenericMapToListIdentityHashTest extends TestCase
 	@Test
 	public void testRemoveListFor()
 	{
+		GenericMapToList<Integer, Character> dkm =
+				GenericMapToList.getMapToList(IdentityHashMap.class);
 		assertNull(dkm.removeListFor(CONST_1A));
 		assertNull(dkm.removeListFor(null));
-		populate();
+		populate(dkm);
 		List<Character> l = dkm.removeListFor(CONST_1A);
 		assertEquals(1, l.size());
-		assertTrue(l.contains(CONST_A));
+		assertTrue(l.contains(TestSupport.CONST_A));
 		assertFalse(dkm.containsListFor(CONST_1A));
 		assertNull(dkm.getListFor(CONST_1A));
-		l = dkm.removeListFor(CONST_2);
+		l = dkm.removeListFor(TestSupport.I2);
 		assertEquals(3, l.size());
-		assertTrue(l.contains(CONST_D));
-		assertTrue(l.contains(CONST_E));
+		assertTrue(l.contains(TestSupport.CONST_D));
+		assertTrue(l.contains(TestSupport.CONST_E));
 		assertTrue(l.contains(null));
 		l = dkm.removeListFor(null);
 		assertEquals(1, l.size());
-		assertTrue(l.contains(CONST_F));
+		assertTrue(l.contains(TestSupport.CONST_F));
 	}
 
 	@Test
 	public void testRemoveFromListFor()
 	{
-		assertFalse(dkm.removeFromListFor(CONST_1B, CONST_D));
-		populate();
-		assertTrue(dkm.removeFromListFor(CONST_1B, CONST_B));
+		GenericMapToList<Integer, Character> dkm =
+				GenericMapToList.getMapToList(IdentityHashMap.class);
+		assertFalse(dkm.removeFromListFor(CONST_1B, TestSupport.CONST_D));
+		populate(dkm);
+		assertTrue(dkm.removeFromListFor(CONST_1B, TestSupport.CONST_B));
 		assertTrue(dkm.containsListFor(CONST_1B));
 		// Keys are instance
 		assertFalse(dkm.containsListFor(new Integer(1)));
 		assertEquals(1, dkm.sizeOfListFor(CONST_1B));
-		assertFalse(dkm.removeFromListFor(CONST_1B, CONST_A));
+		assertFalse(dkm.removeFromListFor(CONST_1B, TestSupport.CONST_A));
 		assertTrue(dkm.containsListFor(CONST_1B));
-		assertFalse(dkm.removeFromListFor(CONST_1B, CONST_B));
-		assertTrue(dkm.removeFromListFor(CONST_1B, CONST_C));
+		assertFalse(dkm.removeFromListFor(CONST_1B, TestSupport.CONST_B));
+		assertTrue(dkm.removeFromListFor(CONST_1B, TestSupport.CONST_C));
 		assertEquals(0, dkm.sizeOfListFor(CONST_1B));
 		assertFalse(dkm.containsListFor(CONST_1B));
 
 		// add a second :)
-		dkm.addToListFor(CONST_2, CONST_D);
-		assertFalse(dkm.removeFromListFor(CONST_2, CONST_A));
-		assertTrue(dkm.containsListFor(CONST_2));
-		assertEquals(4, dkm.sizeOfListFor(CONST_2));
-		assertFalse(dkm.removeFromListFor(CONST_2, CONST_A));
-		assertTrue(dkm.removeFromListFor(CONST_2, CONST_D));
-		assertEquals(3, dkm.sizeOfListFor(CONST_2));
-		assertTrue(dkm.containsListFor(CONST_2));
-		assertTrue(dkm.removeFromListFor(CONST_2, CONST_E));
-		assertEquals(2, dkm.sizeOfListFor(CONST_2));
-		assertTrue(dkm.containsListFor(CONST_2));
-		assertTrue(dkm.removeFromListFor(CONST_2, null));
-		assertEquals(1, dkm.sizeOfListFor(CONST_2));
-		assertTrue(dkm.containsListFor(CONST_2));
-		assertTrue(dkm.removeFromListFor(CONST_2, CONST_D));
-		assertEquals(0, dkm.sizeOfListFor(CONST_2));
-		assertFalse(dkm.containsListFor(CONST_2));
+		dkm.addToListFor(TestSupport.I2, TestSupport.CONST_D);
+		assertFalse(dkm.removeFromListFor(TestSupport.I2, TestSupport.CONST_A));
+		assertTrue(dkm.containsListFor(TestSupport.I2));
+		assertEquals(4, dkm.sizeOfListFor(TestSupport.I2));
+		assertFalse(dkm.removeFromListFor(TestSupport.I2, TestSupport.CONST_A));
+		assertTrue(dkm.removeFromListFor(TestSupport.I2, TestSupport.CONST_D));
+		assertEquals(3, dkm.sizeOfListFor(TestSupport.I2));
+		assertTrue(dkm.containsListFor(TestSupport.I2));
+		assertTrue(dkm.removeFromListFor(TestSupport.I2, TestSupport.CONST_E));
+		assertEquals(2, dkm.sizeOfListFor(TestSupport.I2));
+		assertTrue(dkm.containsListFor(TestSupport.I2));
+		assertTrue(dkm.removeFromListFor(TestSupport.I2, null));
+		assertEquals(1, dkm.sizeOfListFor(TestSupport.I2));
+		assertTrue(dkm.containsListFor(TestSupport.I2));
+		assertTrue(dkm.removeFromListFor(TestSupport.I2, TestSupport.CONST_D));
+		assertEquals(0, dkm.sizeOfListFor(TestSupport.I2));
+		assertFalse(dkm.containsListFor(TestSupport.I2));
 
 		// Test null stuff :)
-		assertFalse(dkm.removeFromListFor(null, CONST_A));
+		assertFalse(dkm.removeFromListFor(null, TestSupport.CONST_A));
 		assertTrue(dkm.containsListFor(null));
 		assertEquals(1, dkm.sizeOfListFor(null));
-		assertFalse(dkm.removeFromListFor(null, CONST_A));
-		assertTrue(dkm.removeFromListFor(null, CONST_F));
+		assertFalse(dkm.removeFromListFor(null, TestSupport.CONST_A));
+		assertTrue(dkm.removeFromListFor(null, TestSupport.CONST_F));
 		assertEquals(0, dkm.sizeOfListFor(null));
 		assertFalse(dkm.containsListFor(null));
 	}
@@ -237,29 +218,33 @@ public class GenericMapToListIdentityHashTest extends TestCase
 	@Test
 	public void testContainsInList()
 	{
-		assertFalse(dkm.containsInList(CONST_1B, CONST_D));
-		populate();
-		assertTrue(dkm.containsInList(CONST_1B, CONST_B));
+		GenericMapToList<Integer, Character> dkm =
+				GenericMapToList.getMapToList(IdentityHashMap.class);
+		assertFalse(dkm.containsInList(CONST_1B, TestSupport.CONST_D));
+		populate(dkm);
+		assertTrue(dkm.containsInList(CONST_1B, TestSupport.CONST_B));
 		// Keys are instance
-		assertFalse(dkm.containsInList(new Integer(1), CONST_B));
-		assertTrue(dkm.containsInList(CONST_1B, CONST_B));
-		assertTrue(dkm.containsInList(CONST_1B, CONST_C));
-		assertFalse(dkm.containsInList(CONST_1B, CONST_D));
+		assertFalse(dkm.containsInList(new Integer(1), TestSupport.CONST_B));
+		assertTrue(dkm.containsInList(CONST_1B, TestSupport.CONST_B));
+		assertTrue(dkm.containsInList(CONST_1B, TestSupport.CONST_C));
+		assertFalse(dkm.containsInList(CONST_1B, TestSupport.CONST_D));
 
 		// add a second :)
-		dkm.addToListFor(CONST_1B, CONST_C);
-		assertTrue(dkm.containsInList(CONST_1B, CONST_C));
+		dkm.addToListFor(CONST_1B, TestSupport.CONST_C);
+		assertTrue(dkm.containsInList(CONST_1B, TestSupport.CONST_C));
 
 		// Test null stuff :)
-		assertTrue(dkm.containsInList(CONST_2, null));
+		assertTrue(dkm.containsInList(TestSupport.I2, null));
 
-		assertFalse(dkm.containsInList(null, CONST_A));
-		assertTrue(dkm.containsInList(null, CONST_F));
+		assertFalse(dkm.containsInList(null, TestSupport.CONST_A));
+		assertTrue(dkm.containsInList(null, TestSupport.CONST_F));
 	}
 
 	@Test
 	public void testGetKeySet()
 	{
+		GenericMapToList<Integer, Character> dkm =
+				GenericMapToList.getMapToList(IdentityHashMap.class);
 		Set<Integer> s = dkm.getKeySet();
 		assertEquals(0, s.size());
 		s.add(Integer.valueOf(-5));
@@ -269,24 +254,26 @@ public class GenericMapToListIdentityHashTest extends TestCase
 		assertEquals(1, s.size());
 		// And ensure references are not kept the other direction to be altered
 		// by changes in the underlying DoubleKeyMap
-		populate();
+		populate(dkm);
 		assertEquals(1, s.size());
 		assertEquals(0, s2.size());
 		Set<Integer> s3 = dkm.getKeySet();
 		assertEquals(5, s3.size());
 		assertTrue(s3.contains(CONST_1A));
 		assertTrue(s3.contains(CONST_1B));
-		assertTrue(s3.contains(CONST_2));
-		assertTrue(s3.contains(CONST_5));
+		assertTrue(s3.contains(TestSupport.I2));
+		assertTrue(s3.contains(TestSupport.I5));
 		assertTrue(s3.contains(null));
 	}
 
 	@Test
 	public void testClearIsEmpty()
 	{
+		GenericMapToList<Integer, Character> dkm =
+				GenericMapToList.getMapToList(IdentityHashMap.class);
 		assertTrue(dkm.isEmpty());
 		assertEquals(0, dkm.size());
-		populate();
+		populate(dkm);
 		assertFalse(dkm.isEmpty());
 		assertEquals(5, dkm.size());
 		dkm.clear();
@@ -298,13 +285,13 @@ public class GenericMapToListIdentityHashTest extends TestCase
 		dkm.clear();
 		assertTrue(dkm.isEmpty());
 		assertEquals(0, dkm.size());
-		dkm.addToListFor(Integer.valueOf(3), 'G');
+		dkm.addToListFor(TestSupport.I3, 'G');
 		assertFalse(dkm.isEmpty());
 		assertEquals(1, dkm.size());
 		dkm.clear();
 		assertTrue(dkm.isEmpty());
 		assertEquals(0, dkm.size());
-		dkm.addToListFor(CONST_5, null);
+		dkm.addToListFor(TestSupport.I5, null);
 		assertFalse(dkm.isEmpty());
 		assertEquals(1, dkm.size());
 		dkm.clear();
@@ -315,6 +302,8 @@ public class GenericMapToListIdentityHashTest extends TestCase
 	@Test
 	public void testEmptyAddAll()
 	{
+		GenericMapToList<Integer, Character> dkm =
+				GenericMapToList.getMapToList(IdentityHashMap.class);
 		dkm.addAllToListFor(CONST_1A, null);
 		assertFalse(dkm.containsListFor(CONST_1A));
 		dkm.addAllToListFor(CONST_1A, new ArrayList<>());
@@ -324,19 +313,21 @@ public class GenericMapToListIdentityHashTest extends TestCase
 	@Test
 	public void testAddAll()
 	{
+		GenericMapToList<Integer, Character> dkm =
+				GenericMapToList.getMapToList(IdentityHashMap.class);
 		List<Character> l = new ArrayList<>();
-		l.add(CONST_A);
+		l.add(TestSupport.CONST_A);
 		l.add(null);
-		l.add(CONST_A);
-		l.add(CONST_B);
+		l.add(TestSupport.CONST_A);
+		l.add(TestSupport.CONST_B);
 		dkm.addAllToListFor(CONST_1A, l);
 		assertTrue(dkm.containsListFor(CONST_1A));
 		assertEquals(4, dkm.sizeOfListFor(CONST_1A));
-		dkm.addToListFor(CONST_1A, CONST_D);
+		dkm.addToListFor(CONST_1A, TestSupport.CONST_D);
 		assertEquals(4, l.size());
 		// Check reference semantics!
-		l.add(CONST_C);
-		l.add(CONST_E);
+		l.add(TestSupport.CONST_C);
+		l.add(TestSupport.CONST_E);
 		assertTrue(dkm.containsListFor(CONST_1A));
 		assertEquals(5, dkm.sizeOfListFor(CONST_1A));
 		l.clear();
@@ -347,46 +338,47 @@ public class GenericMapToListIdentityHashTest extends TestCase
 	@Test
 	public void testInstanceBehavior()
 	{
-		Character ca = Character.valueOf('a');
-		Character cb = Character.valueOf('b');
-		Character cc = Character.valueOf('c');
-		Character ca1 = new Character('a');
-		Integer i1 = CONST_1A;
-		dkm.addToListFor(i1, ca);
-		dkm.addToListFor(i1, cb);
-		dkm.addToListFor(i1, cc);
-		Integer i2 = CONST_2;
-		dkm.addToListFor(i2, ca);
-		dkm.addToListFor(i2, ca);
-		Integer i3 = Integer.valueOf(3);
-		dkm.addToListFor(i3, cb);
-		dkm.addToListFor(i3, cc);
-		assertTrue(dkm.containsInList(i1, ca));
-		assertTrue(dkm.containsInList(i1, ca1));
-		assertTrue(dkm.removeFromListFor(i1, ca1));
-		assertFalse(dkm.containsInList(i1, ca));
+		GenericMapToList<Integer, Character> dkm =
+				GenericMapToList.getMapToList(IdentityHashMap.class);
+		Character ca = TestSupport.CONST_A;
+		Character cb = TestSupport.CONST_B;
+		Character cc = TestSupport.CONST_C;
+		Character ca1 = new Character(TestSupport.CONST_A.charValue());
+		dkm.addToListFor(CONST_1A, ca);
+		dkm.addToListFor(CONST_1A, cb);
+		dkm.addToListFor(CONST_1A, cc);
+		dkm.addToListFor(TestSupport.I2, ca);
+		dkm.addToListFor(TestSupport.I2, ca);
+		dkm.addToListFor(TestSupport.I3, cb);
+		dkm.addToListFor(TestSupport.I3, cc);
+		assertTrue(dkm.containsInList(CONST_1A, ca));
+		assertTrue(dkm.containsInList(CONST_1A, ca1));
+		assertTrue(dkm.removeFromListFor(CONST_1A, ca1));
+		assertFalse(dkm.containsInList(CONST_1A, ca));
 
-		assertTrue(dkm.containsInList(i2, ca));
-		assertTrue(dkm.containsInList(i2, ca1));
-		assertTrue(dkm.removeFromListFor(i2, ca1));
+		assertTrue(dkm.containsInList(TestSupport.I2, ca));
+		assertTrue(dkm.containsInList(TestSupport.I2, ca1));
+		assertTrue(dkm.removeFromListFor(TestSupport.I2, ca1));
 		// There were two
-		assertTrue(dkm.containsInList(i2, ca));
-		assertTrue(dkm.removeFromListFor(i2, ca));
+		assertTrue(dkm.containsInList(TestSupport.I2, ca));
+		assertTrue(dkm.removeFromListFor(TestSupport.I2, ca));
 		// There were two
-		assertFalse(dkm.containsInList(i2, ca));
+		assertFalse(dkm.containsInList(TestSupport.I2, ca));
 	}
 
 	@Test
 	public void testAddAllLists()
 	{
+		GenericMapToList<Integer, Character> dkm =
+				GenericMapToList.getMapToList(IdentityHashMap.class);
+		populate(dkm);
 		HashMapToList<Integer, Character> dkm2 = new HashMapToList<>();
-		populate();
 		dkm2.addAllLists(dkm);
-		assertTrue(dkm.removeFromListFor(CONST_1B, CONST_C));
-		assertTrue(dkm2.containsInList(CONST_1B, CONST_C));
+		assertTrue(dkm.removeFromListFor(CONST_1B, TestSupport.CONST_C));
+		assertTrue(dkm2.containsInList(CONST_1B, TestSupport.CONST_C));
 
-		assertTrue(dkm2.removeFromListFor(CONST_1B, CONST_B));
-		assertTrue(dkm.containsInList(CONST_1B, CONST_B));
+		assertTrue(dkm2.removeFromListFor(CONST_1B, TestSupport.CONST_B));
+		assertTrue(dkm.containsInList(CONST_1B, TestSupport.CONST_B));
 
 		dkm.removeListFor(CONST_1B);
 		assertFalse(dkm.containsListFor(CONST_1B));
